Fix overflow cards singoli personaggi

--- a/src/compoundViews (views)/SingleElementWrappers/SingleElements.module.css
+++ b/src/compoundViews (views)/SingleElementWrappers/SingleElements.module.css
@@ -16,6 +16,8 @@
     display: flex;
     justify-content: center;
     align-items: flex-start;
+    overflow-x: clip;
+    text-overflow: clip;
 }
 
 /* Central card style */
